--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Paul Tsnobiladzé",
   "license": "MIT",
   "dependencies": {
-    "@react-pdf/renderer": "^2.0.0-beta.14",
+    "@react-pdf/renderer": "^2.0.0-beta.19",
     "@react-pdf/styled-components": "^1.4.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
@@ -24,15 +24,19 @@
     "@babel/core": "^7.12.0",
     "@babel/preset-env": "^7.12.0",
     "@babel/preset-react": "^7.10.4",
+    "assert": "^2.0.0",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "browserify-zlib": "^0.2.0",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^4.0.0-beta.1"
   },
   "main": "index.js"
 }
