--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Paul Tsnobiladzé",
   "license": "MIT",
   "dependencies": {
-    "@react-pdf/renderer": "^2.0.0-beta.19",
+    "@react-pdf/renderer": "^2.0.12",
     "@react-pdf/styled-components": "^1.4.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
@@ -34,9 +34,9 @@
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.28.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.0.0-beta.1"
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^4.0.0-beta.3"
   },
   "main": "index.js",
   "resolutions": {
