--- a/package.json
+++ b/package.json
@@ -15,31 +15,26 @@
   "author": "Paul Tsnobiladzé",
   "license": "MIT",
   "dependencies": {
-    "@react-pdf/renderer": "^2.0.12",
-    "@react-pdf/styled-components": "^1.4.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "@react-pdf/renderer": "^2.1.0",
+    "react": "^18.0.0-rc.0",
+    "react-dom": "^18.0.0-rc.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.0",
-    "@babel/preset-env": "^7.12.0",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/core": "^7.16.2",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "assert": "^2.0.0",
-    "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "babel-loader": "^8.2.3",
     "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^4.0.0-beta.3"
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3"
   },
-  "main": "index.js",
-  "resolutions": {
-    "**/node-fetch": "2.6.1"
-  }
+  "main": "index.js"
 }
